--- a/template/page-about.html
+++ b/template/page-about.html
@@ -369,7 +369,7 @@
                   <div class="overlay-container">
                     <img src="images/team-member-1.png" alt="Fernando Lopes">
                     <div class="overlay-bottom">
-                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                      <p class="small margin-clear">Cuida das áreas financeira e contábil, além de ser o responsável pelo operacional interno da empresa. Atuou no projeto mecânico de um sistema de transmissão para a equipe Poli Racing de Fórmula SAE, trabalhou na liga de mercado financeiro da Poli USP e estagiou no HSBC Asset Management Group na área de Macro and Strategy Research (Quantitative Analysis), sendo finalista do Campeonato de Algoritmos para Mercado Financeiro, organizado pela Corretora Souza Barros. Realizou o curso Creativity, Innovation & New Businesses na Fondazione CUOA (Vicenza – Itália).</p>
                     </div>
                   </div>
                   <div class="body">
@@ -420,8 +420,8 @@
                   </div>
                 </div>
               </div>
-
-            </div>
+              
+            </div>         
           </div>
         </div>
       </section>
