--- a/template/page-case-1.html
+++ b/template/page-case-1.html
@@ -213,6 +213,8 @@
       </div>
       <!-- header-container end -->
 
+      <!-- start page -->
+
       <!-- banner start -->
       <!-- ================ -->
       <div class="banner dark-translucent-bg video-background pv-40 dark-translucent-bg hovered">
