--- a/template/index.html
+++ b/template/index.html
@@ -751,7 +751,7 @@
 
       <!-- section na mídia start -->     
       <div id="media-section" class="dark-translucent-bg pv-45 clearfix" style="background-image:url(images/tech-bg-image-2.png)">
-        <div class="container">
+        <div class="container owl-carousel content-slider-with-controls">
             <div class="main">
               <h2 class="page-title text-white text-center">Na Mídia</h2>
               <div class="separator"></div>
