--- a/template/css/style.css
+++ b/template/css/style.css
@@ -262,7 +262,8 @@ ul {
 }
 
 .dark-bg {
-  background-color: #2c2c2c;
+  /* background-color: #2c2c2c; */
+  background-color: #1e231e;
   color: #cdcdcd;
 }
 
@@ -1417,7 +1418,7 @@ h5 + .separator {
 /*Buttons Sizes*/
 .btn {
   padding: 7px 20px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.4666666667;
   border-radius: 3px;
   margin: 10px 0;
@@ -1499,7 +1500,7 @@ h5 + .separator {
   z-index: 3;
   right: 17px;
   position: absolute;
-  line-height: 34px;
+  line-height: 30px;
   top: 0;
   min-width: 12px;
 }
@@ -2217,6 +2218,7 @@ h5 + .separator {
 .feature-box p {
   clear: both;
   margin-bottom: 15px;
+  font-size: 14px;
 }
 
 .feature-box:not(.shadow):hover .icon {
