--- a/template/index.html
+++ b/template/index.html
@@ -228,6 +228,59 @@
               <ul class="slides">
                 <!-- slide 1 start -->
                 <!-- ================ -->
+                <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Máquinas e Sistemas">
+                <!-- main image -->
+                <img src="images/bg-slider-3.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">          
+                <!-- Transparent Background -->
+                <div class="tp-caption dark-translucent-bg"
+                  data-x="center"
+                  data-y="center"
+                  data-start="0"
+                  data-transform_idle="o:1;"
+                  data-transform_in="o:0;s:600;e:Power2.easeInOut;"
+                  data-transform_out="o:0;s:600;"
+                  data-width="5000"
+                  data-height="5000">
+                </div>
+                <!-- LAYER NR. 1 -->
+                <div class="tp-caption large_white"
+                  data-x="center"
+                  data-y="200"
+                  data-start="500"
+                  data-width="1000"
+                  data-transform_idle="o:1;"
+                  data-transform_in="y:[100%];sX:1;sY:1;o:0;s:900;e:Power4.easeInOut;"
+                  data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
+                  data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;"
+                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Máquinas e Sistemas para o seu Negócio
+                </div>
+                <!-- LAYER NR. 2 -->
+                <div class="tp-caption large_white tp-resizeme hidden-sm-down benefits"
+                  data-x="center"
+                  data-y="260"
+                  data-start="650"
+                  data-width="500"
+                  data-transform_idle="o:1;"
+                  data-transform_in="o:0;s:2000;e:Power4.easeInOut;">
+                  <div class="separator light"></div>
+                </div>
+                <!-- LAYER NR. 3 -->
+                <div class="tp-caption medium_white hidden-sm-down"
+                  data-x="center"
+                  data-y="300"
+                  data-start="650"
+                  data-width="800"
+                  data-transform_idle="o:1;"
+                  data-transform_in="y:[100%];sX:1;sY:1;s:900;e:Power4.easeInOut;"
+                  data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
+                  data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
+                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Trabalhamos com projetos sob demanda de máquinas de classificação<br> de diversos produtos e de sistemas de controle de qualidade
+                </div>
+                </li>
+                <!-- slide 1 end -->
+                
+                <!-- slide 2 start -->
+                <!-- ================ -->
                 <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Máquinas Inteligentes">
                   
                 <!-- main image -->
@@ -255,7 +308,7 @@
                   data-transform_in="y:[100%];sX:1;sY:1;o:0;s:900;e:Power4.easeInOut;"
                   data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
                   data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;"
-                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Máquinas Agrícolas Inteligentes
+                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Soluções Inteligentes para a Agroindústria
                 </div>
                   
                 <!-- LAYER NR. 2 -->
@@ -281,9 +334,10 @@
                   data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
                   data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Usamos visão computacional e inteligência artificial para automatizar<br> a seleção e a padronização de produtos agrícolas
                 </div>
-                <!-- slide 1 end -->
+                </li>
+                <!-- slide 2 end -->
 
-                <!-- slide 2 start -->
+                <!-- slide 3 start -->
                 <!-- ================ -->
                 <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Análises em Tempo Real">
 
@@ -339,58 +393,9 @@
                   data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Incorporamos inteligência à agroindústria para gerar<br> ganhos de eficiência, precisão e produtividade
                 </div>
                 </li>
-
-                <!-- slide 3 start -->
-                <!-- ================ -->
-                <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Máquinas e Sistemas">
-                <!-- main image -->
-                <img src="images/bg-slider-3.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">          
-                <!-- Transparent Background -->
-                <div class="tp-caption dark-translucent-bg"
-                  data-x="center"
-                  data-y="center"
-                  data-start="0"
-                  data-transform_idle="o:1;"
-                  data-transform_in="o:0;s:600;e:Power2.easeInOut;"
-                  data-transform_out="o:0;s:600;"
-                  data-width="5000"
-                  data-height="5000">
-                </div>
-                <!-- LAYER NR. 1 -->
-                <div class="tp-caption large_white"
-                  data-x="center"
-                  data-y="200"
-                  data-start="500"
-                  data-width="1000"
-                  data-transform_idle="o:1;"
-                  data-transform_in="y:[100%];sX:1;sY:1;o:0;s:900;e:Power4.easeInOut;"
-                  data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
-                  data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;"
-                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Máquinas e Sistemas para o seu Negócio
-                </div>
-                <!-- LAYER NR. 2 -->
-                <div class="tp-caption large_white tp-resizeme hidden-sm-down benefits"
-                  data-x="center"
-                  data-y="260"
-                  data-start="650"
-                  data-width="500"
-                  data-transform_idle="o:1;"
-                  data-transform_in="o:0;s:2000;e:Power4.easeInOut;">
-                  <div class="separator light"></div>
-                </div>
-                <!-- LAYER NR. 3 -->
-                <div class="tp-caption medium_white hidden-sm-down"
-                  data-x="center"
-                  data-y="300"
-                  data-start="650"
-                  data-width="800"
-                  data-transform_idle="o:1;"
-                  data-transform_in="y:[100%];sX:1;sY:1;s:900;e:Power4.easeInOut;"
-                  data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
-                  data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Trabalhamos com projetos sob demanda de máquinas de classificação<br> de diversos produtos e de sistemas de controle de qualidade
-                </div>
                 <!-- slide 3 end -->
+
+
               </ul>
               <div class="tp-bannertimer"></div>
             </div>
@@ -402,9 +407,10 @@
       <!-- banner end -->
 
       <div id="page-start"></div>
+      
       <!-- section -->
       <!-- ================ -->
-      <section class="main-container">
+      <!--<section class="main-container">
         <div class="container">
           <div class="row">
             
@@ -423,6 +429,29 @@
                 <div class="mb-20">
                   <a class="cta-youtube btn btn-transparent btn-animated" href="https://www.youtube.com/user/MVisiaBrasil">Assista aos nossos vídeos!<i class="fa fa-angle-double-right"></i></a>
                 </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section> -->
+      <!-- section end -->
+
+      <section class="main-container">
+        <div class="container">
+          <div class="row">
+            
+            <div class="col-lg-6 order-lg-1 mb-40">
+              <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
+              <p>O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>.</p>
+              <p>Desenvolvemos também a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
+              <p>Trazemos <strong>eficiência, redução de custos e aumento de qualidade</strong> para sistemas de produção da <strong>agroindústria</strong>, utilizando <strong>visão computacional e inteligência artificial.</strong></p>
+              <a class="btn radius-2 btn-transparent btn-hvr btn-animated btn-bordered-green" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+            </div>
+
+            <div class="col-lg-6 order-lg-2">
+              <div class="bordered text-center">
+                <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="image-alone" src="images/about-bg-image2.png" alt="mvisia-youtube-channel"></a>
               </div>
             </div>
 
@@ -607,24 +636,18 @@
               <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                 <h3 class="card-title">Redução de custos</h3>
-                <div class="separator clearfix"></div>
-                <p>Automação na seleção de produtos<br> e na avaliação de qualidade</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
                 <h3 class="card-title">Aumento de Produtividade</h3>
-                <div class="separator clearfix"></div>
-                <p>Ganho de eficiência nos processos de<br> seleção e de controle de qualidade</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
                 <h3 class="card-title">Controle de qualidade</h3>
-                <div class="separator clearfix"></div>
-                <p>Ganho de precisão para a seleção da safra<br> e garantia de produtos com qualidade</p>
               </div>
             </div>
           </div>
@@ -633,24 +656,18 @@
               <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
                 <h3>Relatórios detalhados</h3>
-                <div class="separator clearfix"></div>
-                <p>Transparência nas métricas de performance<br> das máquinas e sistemas</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-5.svg"></span>
                 <h3 class="card-title">Operação intuitiva</h3>
-                <div class="separator clearfix"></div>
-                <p>Máquinas e sistemas de fácil operação</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
                 <h3 class="card-title">Assistência técnica</h3>
-                <div class="separator clearfix"></div>
-                <p>Garantia dos equipamentos e atuação de<br> equipe especializada no suporte</p>
               </div>
             </div>
           </div>
