--- a/template/css/custom.css
+++ b/template/css/custom.css
@@ -18,7 +18,7 @@ File Description: Place here your custom CSS styles
 }
 
 .btn-bordered-green {
-    border: 1px solid #24a828;
+    border: 2px solid #24a828;
     border-radius: 50px;
 }
 
@@ -71,4 +71,8 @@ h3.card-title {
 
 #benefits, #technology-section {
     box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.5);
+}
+
+.image-alone {
+    border-radius: 5px;
 }
